scrollbar fixed for characters

--- a/src/components/Characters.css
+++ b/src/components/Characters.css
@@ -1,10 +1,11 @@
 .Characters {
-    height: 100vh;
-    width: 100vw;
+    /* height: 100vh; */
+    /* width: 100vw; */
     background: url("../assets/media/images/BG4characters.png") center center no-repeat;
 }
 
 .cards {
+    height: 100vh;
     text-align: center;
     /* width: 95%; */
     max-width: 1000px;
